--- a/public/css/home.css
+++ b/public/css/home.css
@@ -2,8 +2,19 @@ body{
     font-family: "Lato","Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
+.header-11-sub {
+    padding-top: 110px;
+    padding-bottom: 110px;
+    color: #bdc3c7;
+    position: relative;
+}
+
 .header-11-sub p, .header-11-sub h3, .header-11 .navbar {
     font-family: "Lato","Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.header-11-sub p{
+    font-size: 14px;
 }
 
 textarea,
@@ -27,8 +38,13 @@ input[type="color"],
 
 }
 
+.price-1 .plan{
+    border-radius:10px;
+}
+
 .plan ul{
     list-style-type: none;
+    margin-left: -20px;
 }
 
 .plan ul li{
@@ -42,4 +58,18 @@ input[type="color"],
     font-family: "Lato","Helvetica Neue", Helvetica, Arial, sans-serif;
     margin-top: 0px;
     margin-bottom: 40px;
+}
+
+.price-1 {
+    padding-top: 40px;
+    padding-bottom: 110px;
+}
+
+.btn-primary .badge{
+    background-color: red;
+    color: white;
+}
+
+.next-row{
+    margin-top: 10px;
 }
