--- a/public/css/typography.css
+++ b/public/css/typography.css
@@ -22,3 +22,10 @@
   font-weight: 400;
   src: local('Roboto Regular'), local('Roboto-Regular'), url(../fonts/Roboto/CrYjSnGjrRCn0pd9VQsnFOvvDin1pK8aKteLpeZ5c0A.woff) format('woff');
 }
+
+@font-face {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Montserrat Regular'), local('Montserrat-Regular'), url(../fonts/Montserrat/zhcz-_WihjSQC0oHJ9TCYL3hpw3pgy2gAi-Ip7WPMi0.woff) format('woff');
+}
